# boostrap-academy-backend

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE.md  README.md  config.dev.toml  config.toml  flake.nix  justfile  renovate.json
.forgejo/workflows/: build.yml  check.yml  test.yml
.github/workflows/: build.yml  check.yml  nix.yml  test.yml
academy/: Cargo.toml  build.rs
academy/src/: cache.rs  database.rs  email.rs  lib.rs  main.rs
academy/src/commands/: email.rs  jwt.rs  migrate.rs  mod.rs  serve.rs
academy/src/commands/admin/: mod.rs  user.rs
academy/src/commands/migrate/: mod.rs
academy/src/commands/migrate/load/: auth.rs  mod.rs
academy/src/commands/tasks/: mod.rs
academy/src/environment/: mod.rs  types.rs
academy_api/rest/: Cargo.toml
academy_api/rest/assets/swagger-ui/: update.sh
academy_api/rest/src/: docs.rs  errors.rs  lib.rs  macros.rs
academy_api/rest/src/docs/: redoc.rs  swagger.rs
academy_api/rest/src/extractors/: auth.rs  user_agent.rs
academy_api/rest/src/middlewares/: client_ip.rs  mod.rs  panic_handler.rs  request_id.rs  trace.rs
academy_api/rest/src/models/: contact.rs  job.rs  mod.rs  oauth2.rs  session.rs  user.rs
academy_api/rest/src/routes/: config.rs  contact.rs  health.rs  internal.rs  jobs.rs  mfa.rs  mod.rs  oauth2.rs  session.rs  user.rs
academy_assets/: Cargo.toml  build.rs
academy_assets/src/: lib.rs
academy_auth/contracts/: Cargo.toml
academy_auth/impl/: Cargo.toml
academy_auth/impl/src/: access_token.rs  internal.rs  lib.rs  refresh_token.rs
academy_auth/impl/src/tests/: authenticate.rs  authenticate_by_password.rs  authenticate_by_refresh_token.rs  invalidate_access_tokens.rs  issue_tokens.rs  mod.rs
academy_cache/valkey/: Cargo.toml
academy_cache/valkey/src/: lib.rs
academy_cache/valkey/tests/: cache.rs
academy_config/: Cargo.toml
academy_config/src/: duration.rs  lib.rs
academy_core/config/contracts/: Cargo.toml
academy_core/config/contracts/src/: lib.rs
academy_core/config/impl/: Cargo.toml
academy_core/config/impl/src/: lib.rs
academy_core/contact/contracts/: Cargo.toml
academy_core/contact/contracts/src/: lib.rs
academy_core/contact/impl/: Cargo.toml
academy_core/contact/impl/src/: lib.rs
academy_core/health/impl/: Cargo.toml
academy_core/health/impl/src/: lib.rs
academy_core/internal/contracts/: Cargo.toml
academy_core/internal/contracts/src/: auth.rs  lib.rs
academy_core/jobs/impl/: Cargo.toml
academy_core/jobs/impl/src/: jobs.rs  lib.rs
academy_core/mfa/impl/: Cargo.toml
academy_core/mfa/impl/src/: authenticate.rs  disable.rs  lib.rs  recovery.rs  totp_device.rs
academy_core/mfa/impl/src/commands/: authenticate.rs  confirm_totp_device.rs  create_totp_device.rs  disable.rs  mod.rs  reset_totp_device.rs  setup_recovery.rs
academy_core/mfa/impl/src/tests/: disable.rs  enable.rs  initialize.rs  mod.rs
academy_core/oauth2/contracts/: Cargo.toml
academy_core/oauth2/contracts/src/: create_link.rs  lib.rs  link.rs  login.rs  registration.rs
academy_demo/: Cargo.toml
academy_demo/src/: jobs.rs  lib.rs  mfa.rs  oauth2.rs  session.rs  user.rs
academy_di/: Cargo.toml
academy_di_derive/: Cargo.toml
academy_di_derive/src/: lib.rs
academy_email/contracts/: Cargo.toml
academy_email/contracts/src/: lib.rs  template.rs
academy_email/impl/: Cargo.toml
academy_email/impl/src/: lib.rs  template.rs
academy_email/impl/tests/: email.rs
academy_extern/impl/: Cargo.toml
academy_extern/impl/src/: http.rs  internal.rs  lib.rs  oauth2.rs  recaptcha.rs  vat.rs
academy_extern/impl/tests/: oauth2.rs  recaptcha.rs  vat.rs
academy_models/: Cargo.toml
academy_models/src/: auth.rs  contact.rs  email_address.rs  job.rs  lib.rs  macros.rs  mfa.rs  oauth2.rs  pagination.rs  session.rs  url.rs  user.rs
academy_persistence/contracts/: Cargo.toml
academy_persistence/contracts/src/: jobs.rs  lib.rs  mfa.rs  oauth2.rs  session.rs  user.rs
academy_persistence/postgres/: Cargo.toml  build.rs
academy_persistence/postgres/migrations/: 20240531192840_create_users_table.down.sql  20240531192840_create_users_table.up.sql  20240804134534_create_sessions_table.down.sql  20240804134534_create_sessions_table.up.sql  20240827205548_create_totp_devices_table.down.sql  20240827205548_create_totp_devices_table.up.sql  20240827211301_create_mfa_recovery_codes_table.down.sql  20240827211301_create_mfa_recovery_codes_table.up.sql  20240830010703_create_user_details_view.down.sql  20240830010703_create_user_details_view.up.sql  20240904070659_create_oauth2_links_table.down.sql  20240904070659_create_oauth2_links_table.up.sql  20240905013603_add_login_methods_to_user_details_view.down.sql  20240905013603_add_login_methods_to_user_details_view.up.sql  20240906171723_create_user_invoice_info_table.down.sql  20240906171723_create_user_invoice_info_table.up.sql  20241108221645_create_jobs_table.up.sql
academy_persistence/postgres/src/: jobs.rs  lib.rs  mfa.rs  oauth2.rs  session.rs  user.rs
academy_persistence/postgres/tests/: migrations.rs  repositories.rs
academy_persistence/postgres/tests/common/: mod.rs
academy_persistence/postgres/tests/repos/: mfa.rs  mod.rs  oauth2.rs  session.rs  user.rs
academy_shared/contracts/: Cargo.toml
academy_shared/contracts/src/: captcha.rs  hash.rs  id.rs  jwt.rs  lib.rs  password.rs  secret.rs  time.rs  totp.rs
academy_shared/impl/: Cargo.toml
academy_shared/impl/src/: captcha.rs  hash.rs  id.rs  jwt.rs  lib.rs  password.rs  secret.rs  time.rs  totp.rs
academy_templates/contracts/: Cargo.toml
academy_templates/contracts/src/: lib.rs
academy_templates/impl/: Cargo.toml
academy_templates/impl/src/: lib.rs
academy_testing/: Cargo.toml
academy_testing/src/: internal.rs  lib.rs  main.rs  oauth2.rs  recaptcha.rs  vat.rs
academy_utils/: Cargo.toml
academy_utils/src/: lib.rs  macros.rs  patch.rs  required_action.rs
academy_utils/src/serde/: hex.rs
academy_utils_derive/: Cargo.toml
academy_utils_derive/src/: lib.rs
nix/: dev.nix  module.nix  package.nix  packages.nix
(+174 files in other folders)
