[workspace]
resolver = "2"
members = [
  "academy",
  "academy_api/*",
  "academy_auth/*",
  "academy_cache/*",
  "academy_config",
  "academy_core/*/*",
  "academy_demo",
  "academy_di",
  "academy_di_derive",
  "academy_email/*",
  "academy_extern/*",
  "academy_models",
  "academy_persistence/*",
  "academy_shared/*",
  "academy_templates/contracts",
  "academy_templates/impl",
  "academy_testing",
  "academy_utils",
  "academy_utils_derive",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false
homepage = "https://bootstrap.academy/"
repository = "https://github.com/Bootstrap-Academy/backend"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
needless_return = "allow"
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
renamed_function_params = "warn"
todo = "warn"

[workspace.dependencies]
academy.path = "academy"
academy_api_rest.path = "academy_api/rest"
academy_auth_contracts.path = "academy_auth/contracts"
academy_auth_impl.path = "academy_auth/impl"
academy_cache_contracts.path = "academy_cache/contracts"
academy_cache_valkey.path = "academy_cache/valkey"
academy_config.path = "academy_config"
academy_core_config_contracts.path = "academy_core/config/contracts"
academy_core_config_impl.path = "academy_core/config/impl"
academy_core_contact_contracts.path = "academy_core/contact/contracts"
academy_core_contact_impl.path = "academy_core/contact/impl"
academy_core_health_contracts.path = "academy_core/health/contracts"
academy_core_health_impl.path = "academy_core/health/impl"
academy_core_internal_contracts.path = "academy_core/internal/contracts"
academy_core_internal_impl.path = "academy_core/internal/impl"
academy_core_mfa_contracts.path = "academy_core/mfa/contracts"
academy_core_mfa_impl.path = "academy_core/mfa/impl"
academy_core_oauth2_contracts.path = "academy_core/oauth2/contracts"
academy_core_oauth2_impl.path = "academy_core/oauth2/impl"
academy_core_session_contracts.path = "academy_core/session/contracts"
academy_core_session_impl.path = "academy_core/session/impl"
academy_core_user_contracts.path = "academy_core/user/contracts"
academy_core_user_impl.path = "academy_core/user/impl"
academy_demo.path = "academy_demo"
academy_di.path = "academy_di"
academy_di_derive.path = "academy_di_derive"
academy_email_contracts.path = "academy_email/contracts"
academy_email_impl.path = "academy_email/impl"
academy_extern_contracts.path = "academy_extern/contracts"
academy_extern_impl.path = "academy_extern/impl"
academy_models.path = "academy_models"
academy_persistence_contracts.path = "academy_persistence/contracts"
academy_persistence_postgres.path = "academy_persistence/postgres"
academy_shared_contracts.path = "academy_shared/contracts"
academy_shared_impl.path = "academy_shared/impl"
academy_templates_contracts.path = "academy_templates/contracts"
academy_templates_impl.path = "academy_templates/impl"
academy_utils.path = "academy_utils"
academy_utils_derive.path = "academy_utils_derive"

anyhow = { version = "1.0.90", default-features = false, features = ["std"] }
argon2 = { version = "0.5.3", default-features = false, features = ["std", "password-hash"] }
axum = { version = "0.7.7", default-features = false, features = ["http1", "http2", "tokio", "json", "query", "form", "original-uri", "matched-path"] }
axum-extra = { version = "0.9.4", default-features = false, features = ["typed-header"] }
base32 = { version = "0.5.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = { version = "4.5.33", default-features = false }
darling = { version = "0.20.10", default-features = false, features = ["suggestions"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
lettre = { version = "0.11.9", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "serde", "smtp-transport", "tokio1", "tokio1-rustls-tls", "tracing"] }
mockall = { version = "0.13.0", default-features = false }
nutype = { version = "0.5.0", default-features = false, features = ["std", "regex", "serde", "schemars08"] }
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
paste = { version = "1.0.15", default-features = false }
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
quote = { version = "1.0.37", default-features = false, features = ["proc-macro"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
regex = { version = "1.11.0", default-features = false }
reqwest = { version = "0.12.8", default-features = false, features = ["http2", "rustls-tls", "json"] }
schemars = { version = "0.8.21", default-features = false, features = ["derive", "preserve_order", "uuid1", "url"] }
serde = { version = "1.0.210", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.130", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false }
syn = { version = "2.0.79", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
proc-macro2 = { version = "1.0.88", default-features = false, features = ["proc-macro"] }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt", "env-filter"] }
url = { version = "2.5.2", default-features = false, features = ["serde"] }
uuid = { version = "1.11.0", default-features = false, features = ["v4", "v7", "serde"] }

[profile.dev.package]
argon2.opt-level = 3
