[package]
name = "academy"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
academy_api_rest.workspace = true
academy_cache_contracts.workspace = true
academy_cache_valkey.workspace = true
academy_config.workspace = true
academy_core_auth_impl.workspace = true
academy_core_contact_impl.workspace = true
academy_core_health_impl.workspace = true
academy_core_mfa_impl.workspace = true
academy_core_session_impl.workspace = true
academy_core_user_contracts.workspace = true
academy_core_user_impl.workspace = true
academy_demo.workspace = true
academy_di.workspace = true
academy_email_contracts.workspace = true
academy_email_impl.workspace = true
academy_persistence_contracts.workspace = true
academy_persistence_postgres.workspace = true
academy_shared_contracts.workspace = true
academy_shared_impl.workspace = true
academy_templates_impl.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4.5.16", features = ["derive", "env"] }
clap_complete = { version = "4.5.24", default-features = false }
email_address.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt"] }
tracing.workspace = true

[dev-dependencies]
academy_cache_valkey = { workspace = true, features = ["dummy"] }
academy_email_impl = { workspace = true, features = ["dummy"] }
academy_persistence_postgres = { workspace = true, features = ["dummy"] }
