[package]
name = "academy"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
default-run = "academy"

[lints]
workspace = true

[dependencies]
academy_api_rest.workspace = true
academy_auth_impl.workspace = true
academy_cache_contracts.workspace = true
academy_cache_valkey.workspace = true
academy_config.workspace = true
academy_core_config_impl.workspace = true
academy_core_contact_impl.workspace = true
academy_core_health_impl.workspace = true
academy_core_internal_impl.workspace = true
academy_core_mfa_impl.workspace = true
academy_core_oauth2_impl.workspace = true
academy_core_session_impl.workspace = true
academy_core_user_contracts.workspace = true
academy_core_user_impl.workspace = true
academy_demo.workspace = true
academy_di.workspace = true
academy_email_contracts.workspace = true
academy_email_impl.workspace = true
academy_extern_impl.workspace = true
academy_models.workspace = true
academy_persistence_contracts.workspace = true
academy_persistence_postgres.workspace = true
academy_shared_contracts.workspace = true
academy_shared_impl.workspace = true
academy_templates_impl.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
sentry = { version = "0.34.0", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "tracing"] }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# for `commands::migrate::load`
base32.workspace = true
bb8 = { version = "0.8.6", default-features = false }
bb8-postgres = { version = "0.8.1", default-features = false, features = ["with-chrono-0_4", "with-uuid-1"] }
hex.workspace = true
uuid.workspace = true
indicatif = "0.17.8"

[dev-dependencies]
academy_cache_valkey = { workspace = true, features = ["dummy"] }
academy_email_impl = { workspace = true, features = ["dummy"] }
academy_persistence_postgres = { workspace = true, features = ["dummy"] }
