[package]
name = "academy_config"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
academy_models.workspace = true
anyhow.workspace = true
config = { version = "0.14.0", default-features = false, features = ["toml"] }
email_address.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
