[package]
name = "academy_config"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_assets.workspace = true
academy_models.workspace = true
anyhow.workspace = true
config = { version = "0.14.1", default-features = false, features = ["toml"] }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
