[package]
name = "academy_demo"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_models.workspace = true
academy_persistence_contracts.workspace = true
anyhow.workspace = true
argon2.workspace = true
base32.workspace = true
chrono.workspace = true
hex.workspace = true
uuid.workspace = true
