[package]
name = "academy_di_derive"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
quote.workspace = true
syn.workspace = true
