[package]
name = "academy_models"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_utils.workspace = true
anyhow.workspace = true
chrono.workspace = true
email_address.workspace = true
nutype.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
