[package]
name = "academy_testing"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "academy-testing"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum-extra.workspace = true
axum.workspace = true
clap.workspace = true
clap_complete.workspace = true
oauth2.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
