[package]
name = "academy_api_rest"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_core_config_contracts.workspace = true
academy_core_contact_contracts.workspace = true
academy_core_health_contracts.workspace = true
academy_core_mfa_contracts.workspace = true
academy_core_oauth2_contracts.workspace = true
academy_core_session_contracts.workspace = true
academy_core_user_contracts.workspace = true
academy_di.workspace = true
academy_models.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
email_address.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
