[package]
name = "academy_api_rest"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_auth_contracts.workspace = true
academy_core_config_contracts.workspace = true
academy_core_contact_contracts.workspace = true
academy_core_health_contracts.workspace = true
academy_core_internal_contracts.workspace = true
academy_core_mfa_contracts.workspace = true
academy_core_oauth2_contracts.workspace = true
academy_core_session_contracts.workspace = true
academy_core_user_contracts.workspace = true
academy_di.workspace = true
academy_models.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
axum-extra.workspace = true
axum.workspace = true
base64.workspace = true
futures.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.0", default-features = false, features = ["trace"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
