[package]
name = "academy_api_rest"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_assets.workspace = true
academy_auth_contracts.workspace = true
academy_core_config_contracts.workspace = true
academy_core_contact_contracts.workspace = true
academy_core_health_contracts.workspace = true
academy_core_internal_contracts.workspace = true
academy_core_mfa_contracts.workspace = true
academy_core_oauth2_contracts.workspace = true
academy_core_session_contracts.workspace = true
academy_core_user_contracts.workspace = true
academy_di.workspace = true
academy_models.workspace = true
academy_utils.workspace = true
aide = { version = "0.13.4", default-features = false, features = ["axum", "axum-extra", "redoc"] }
anyhow.workspace = true
axum-extra.workspace = true
axum.workspace = true
base64.workspace = true
futures.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.1", default-features = false, features = ["trace"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
