[package]
name = "academy_auth_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_cache_contracts.workspace = true
academy_auth_contracts.workspace = true
academy_di.workspace = true
academy_models.workspace = true
academy_persistence_contracts.workspace = true
academy_shared_contracts.workspace = true
anyhow.workspace = true
hex.workspace = true
serde.workspace = true

[dev-dependencies]
academy_cache_contracts = { workspace = true, features = ["mock"] }
academy_auth_contracts = { workspace = true, features = ["mock"] }
academy_demo.workspace = true
academy_persistence_contracts = { workspace = true, features = ["mock"] }
academy_shared_contracts = { workspace = true, features = ["mock"] }
academy_utils.workspace = true
tokio.workspace = true
