[package]
name = "academy_cache_valkey"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
dummy = []

[dependencies]
anyhow.workspace = true
academy_cache_contracts.workspace = true
bb8-redis = { version = "0.16.0", default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
serde.workspace = true

[dev-dependencies]
academy_config.workspace = true
academy_demo.workspace = true
academy_models.workspace = true
tokio.workspace = true
