[package]
name = "academy_cache_valkey"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
dummy = []

[dependencies]
academy_cache_contracts.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
bb8-redis = { version = "0.17.0", default-features = false }
rmp-serde = { version = "1.3.0", default-features = false }
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
academy_config.workspace = true
academy_demo.workspace = true
academy_models.workspace = true
serde_json.workspace = true
tokio.workspace = true
