[package]
name = "academy_email_contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
mock = ["dep:mockall"]

[dependencies]
academy_models.workspace = true
academy_templates_contracts.workspace = true
anyhow.workspace = true
mockall = { workspace = true, optional = true }
