[package]
name = "academy_email_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
dummy = []

[dependencies]
academy_di.workspace = true
academy_email_contracts.workspace = true
academy_templates_contracts.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
email_address.workspace = true
lettre = { version = "0.11.8", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "serde", "smtp-transport", "tokio1", "tokio1-rustls-tls", "tracing"] }

[dev-dependencies]
academy_config.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
