[package]
name = "academy_email_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
dummy = []

[dependencies]
academy_di.workspace = true
academy_email_contracts.workspace = true
academy_models.workspace = true
academy_templates_contracts.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
lettre.workspace = true

[dev-dependencies]
academy_config.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
