[package]
name = "academy_extern_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
academy_di.workspace = true
academy_extern_contracts.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
academy_config.workspace = true
tokio.workspace = true
