[package]
name = "academy_extern_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_di.workspace = true
academy_extern_contracts.workspace = true
academy_models.workspace = true
academy_shared_contracts.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
oauth2.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
academy_config.workspace = true
academy_utils.workspace = true
tokio.workspace = true
