[package]
name = "academy_persistence_contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
mock = ["dep:mockall"]

[dependencies]
academy_models.workspace = true
anyhow.workspace = true
chrono.workspace = true
email_address.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true
