[package]
name = "academy_persistence_postgres"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
dummy = []

[dependencies]
academy_di.workspace = true
academy_models.workspace = true
academy_persistence_contracts.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
bb8 = { version = "0.8.5", default-features = false }
bb8-postgres = { version = "0.8.1", default-features = false, features = ["with-chrono-0_4", "with-uuid-1"] }
chrono.workspace = true
ouroboros = { version = "0.18.4", default-features = false }
paste = { version = "1.0.15", default-features = false }
uuid.workspace = true

[dev-dependencies]
academy_config.workspace = true
academy_demo.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
