[package]
name = "academy_shared_contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
mock = ["dep:mockall"]

[dependencies]
academy_models.workspace = true
anyhow.workspace = true
chrono.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
