[package]
name = "academy_templates_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_assets.workspace = true
academy_di.workspace = true
academy_templates_contracts.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
serde.workspace = true
tera = { version = "1.20.0", default-features = false }
tracing.workspace = true
