[package]
name = "academy_core_config_contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
mock = ["dep:mockall"]

[dependencies]
mockall = { workspace = true, optional = true }
