[package]
name = "academy_core_config_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
academy_core_config_contracts.workspace = true
academy_di.workspace = true
academy_shared_contracts.workspace = true

[dev-dependencies]
academy_shared_contracts = { workspace = true, features = ["mock"] }
