[package]
name = "academy_core_contact_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_core_contact_contracts.workspace = true
academy_di.workspace = true
academy_email_contracts.workspace = true
academy_models.workspace = true
academy_shared_contracts.workspace = true
academy_utils.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
academy_email_contracts = { workspace = true, features = ["mock"] }
academy_shared_contracts = { workspace = true, features = ["mock"] }
tokio.workspace = true
