[package]
name = "academy_core_health_impl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
academy_cache_contracts.workspace = true
academy_core_health_contracts.workspace = true
academy_di.workspace = true
academy_email_contracts.workspace = true
academy_persistence_contracts.workspace = true
academy_shared_contracts.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
