[package]
name = "academy_core_internal_contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
mock = ["dep:mockall"]

[dependencies]
academy_auth_contracts.workspace = true
academy_models.workspace = true
anyhow.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true
